added sign up modal form, user can now switch between login and sign up in the modal form

--- a/app/assets/stylesheets/components/_modal_login.scss
+++ b/app/assets/stylesheets/components/_modal_login.scss
@@ -28,6 +28,28 @@
     }
 }
 
+.modal-footer p {
+    color:#484848;
+    margin: 0;
+}
+
+.modal-footer-link {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+}
+
+.modal-footer-button {
+    background-color: transparent;
+    color: #008489;
+    font-weight: 500;
+    border: none;
+    text-decoration: none;
+    padding: 0;
+    margin-left: 5px;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
