--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,7 @@
     </div>
   </div>
   <%= render "shared/modal_login" %>
+  <%= render "shared/modal_signup" %>
   <div class="pickerbox">
     <h3>Book unique homes and<br>experiences all over the world.</h3>
     <%= render "shared/new_booking" %>
