--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
 
     <% else %>
       <!-- Login link (when logged out) -->
-      <button type="button" class="navbar-wagon-item navbar-wagon-link login-btn" data-toggle="modal" data-target="#exampleModalCenter">
+      <button type="button" class="navbar-wagon-item navbar-wagon-link login-btn" data-toggle="modal" data-target="#exampleModalCenterLogin">
         Login
       </button>
     <% end %>
